<resources>
    <string name="app_name">MyFlix</string>

    <!-- Bottom Navigation Titles -->
    <string name="title_home">Home</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV</string>
    <string name="title_user">User</string>

    <!-- Filter List -->
    <string name="filter_movie_list">Filter Movies</string>

    <!-- Movie Filter Options -->
    <string name="top_rated">Top Rated</string>
    <string name="popularity">Popularity</string>
    <string name="genre">Genre</string>
    <string name="now_showing">Now Showing</string>
    <string name="upcoming">Upcoming</string>

    <!-- Genres -->
    <string name="action">Action</string>
    <string name="romance">Romance</string>
    <string name="comedy">Comedy</string>


</resources>
